# simple_vector

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp
devops/: config.sh
devops/githooks/: install_git_hooks.sh
devops/githooks/hooks/: pre-commit
devops/misc/: format_all_files.sh
simple_vector_lib/: CMakeLists.txt
simple_vector_lib/include/: simple_vector.hpp  utils.hpp
test/: CMakeLists.txt  test_main.cpp  test_simple_vector.cpp  test_utils.cpp
